# routes/shoppingList.js
@@ -1,47 +1,21 @@
 const express = require('express');
 const router = express.Router();
-const shoppingListController = require('../controllers/shoppingListControllers');
+const shoppingListController = require('../controllers/shoppingListController');
 
-// // CREATE a new shopping list item
-// router.post('/', shoppingListController.addListItem);
+// Import the shopping list controller functions
+const {
+  getShoppingList,
+  getShoppingListItemById,
+  createShoppingListItem,
+  updateShoppingListItem,
+  deleteShoppingListItem,
+} = require('../controllers/shoppingListController');
 
-// // READ all shopping list items
-// router.get('/', shoppingListController.getAllListItems);
-
-// // READ a single shopping list item by ID
-// router.get('/:id', shoppingListController.getListItemById);
-
-// // UPDATE a shopping list item by ID
-// router.patch('/:id', shoppingListController.updateListItemById);
-
-// // DELETE a shopping list item by ID
-// router.delete('/:id', shoppingListController.deleteListItemById);
-
-// module.exports = router;
-
-// CREATE a new shopping list item
-router.post('/shopping-list', (req, res) => {
-  res.status(201).send('This works');
-});
-
-// READ all shopping list items
-router.get('/shopping-list', (req, res) => {
-  res.status(201).send('This works');
-});
-
-// READ a single shopping list item by ID
-router.get('/shopping-list/:id', (req, res) => {
-  res.status(201).send('This works');
-});
-
-// UPDATE a shopping list item by ID
-router.put('/shopping-list/:id', (req, res) => {
-  res.status(201).send('This works');
-});
-
-// DELETE a shopping list item by ID
-router.delete('/shopping-list/:id', (req, res) => {
-  res.status(201).send('This works');
-});
+// Define routes for shopping list CRUD operations
+router.post('/shoppingList', createShoppingListItem);
+router.get('/shoppingList', getShoppingList);
+router.get('/shoppingList/:id', getShoppingListItemById);
+router.put('/shoppingList/:id', updateShoppingListItem);
+router.delete('/shoppingList/:id', deleteShoppingListItem);
 
 module.exports = router;
